# droneai

./: .gitignore  README.md  app.py  data.py  extract_features.py  inference.py  main.py  package.py  pyproject.toml  train.py  train_classifier.py  train_yolo.py  unify_yolo_data.py
data/: README.md
datasets/: README.md
src/: app.py  embed.py  extract_embeddings.py  train_anomaly.py  train_detector.py  train_gru.py  train_yolo.py
